2010-12-08  Lee Howard <faxguy@howardsilvan.com>

	* libtiff/tif_dirread.c: fix crash when reading a badly-constructed
	TIFF per http://bugzilla.maptools.org/show_bug.cgi?id=1994

2010-12-07  Lee Howard <faxguy@howardsilvan.com>

	* libtiff/tif_jpeg.c, libtiff/tif_strip.c: apply patch for 
	CVE-2010-3087 per bug
	http://bugzilla.maptools.org/show_bug.cgi?id=2140

2010-12-06  Lee Howard <faxguy@howardsilvan.com>

	* libtiff/tif_open.c: Fix mode check before opening a file.
	http://bugzilla.maptools.org/show_bug.cgi?id=1906

2010-09-25  Lee Howard <faxguy@howardsilvan.com>

	* tools/tiff2ps.c: improvements and enhancements from Richard Nolde
	with additional command line options for Document Title, 
	Document Creator, and Page Orientation

2010-07-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tools/tiffcrop.c: Patch from Richard Nolde to avoid a
	potentially unterminated buffer due to using an exceptionally long
	file name.

2010-07-08  Andrey Kiselev  <dron@ak4719.spb.edu>

	* tools/tiff2pdf.c: Fixed ID buffer filling in
	t2p_write_pdf_trailer(), thanks to Dmitry V. Levin.

2010-07-07  Andrey Kiselev  <dron@ak4719.spb.edu>

	* lintiff/tif_dirread.c: Really reset the tag count in CheckDirCount()
	to expected value as the warning message suggests. As per bug
	http://bugzilla.maptools.org/show_bug.cgi?id=1963

	* tools/tiffdump.c: Avoid integer overflows computing the buffer size
	for large directories. As per bug
	http://bugzilla.maptools.org/show_bug.cgi?id=2218

2010-07-06  Andrey Kiselev  <dron@ak4719.spb.edu>

	* tools/tiffset.c: Properly handle TIFFTAG_PAGENUMBER,
	TIFFTAG_HALFTONEHINTS, TIFFTAG_YCBCRSUBSAMPLING, TIFFTAG_DOTRANGE
	which should be set by value.

	* libtiff/tif_dirinfo.c: Don't use assertions in _TIFFFieldWithTag()
	and _TIFFFieldWithName() if the tag is not found in the tag table.
	This should be normal situation and returned NULL value should be
	properly handled by the caller.
